# course

./: .gitignore  README.md  dump.rdb  pyproject.toml  ruff.toml
base/: serializers.py
chat/: admin.py  models.py  serializers.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_initial.py
course/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
course/migrations/: 0001_initial.py
education_app/: admin.py  apps.py  consts.py  tasks.py
education_app/chat/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
education_app/chat/migrations/: 0001_initial.py
education_app/course/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
education_app/course/migrations/: 0001_initial.py
education_app/migrations/: 0001_initial.py  0002_alter_course_options_alter_module_options_and_more.py  0002_question_tag_lesson_answer_course_tags.py  0003_alter_answer_options_alter_lesson_options_and_more.py
education_app/models/: __init__.py  chat.py  course.py  users.py
education_app/serializers/: chat.py  course.py  users.py
education_app/services/: chat.py  course.py  users.py
education_app/urls/: chat.py  course.py  users.py
education_app/users/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
education_app/views/: chat.py  course.py  users.py
project/: celery.py  settings.py  urls.py
test/education/: test_course.py
tests/education/: test_users.py
users/: admin.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
(+3 files in other folders)
